; ModuleID = '/home/carl/AnghaBench/tig/src/extr_io.c_io_run.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_io.c_io_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @io_run(%struct.io* %0, i32 %1, i8* %2, i8** %3, i8** %4) #0 {
  %6 = alloca %struct.io*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i8**, align 8
  store %struct.io* %0, %struct.io** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i8** %3, i8*** %9, align 8
  store i8** %4, i8*** %10, align 8
  %11 = load %struct.io*, %struct.io** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = load i8**, i8*** %9, align 8
  %15 = load i8**, i8*** %10, align 8
  %16 = call i32 @io_exec(%struct.io* %11, i32 %12, i8* %13, i8** %14, i8** %15, i32 0)
  ret i32 %16
}

declare dso_local i32 @io_exec(%struct.io*, i32, i8*, i8**, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
